<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_choose_platform">Choose your platform</string>
    <string name="label_choose_platform">Are the keyboard and mouse indispensable?\nOr are you a hardcore console player?</string>
    <string name="platform_pc">PC</string>
    <string name="platform_ps">Play Station</string>
    <string name="platform_xbox">Xbox</string>
    <string name="platform_nintendo">Nintendo</string>
    <string name="text_continue">Continue</string>
</resources>
